# mlops-template-base

./: .gitignore  README.md  cookiecutter.json  pre-commit-config.yml  pyproject.toml  tasks.py
.github/workflows/: tests.yml
hooks/: post_gen_project.sh  pre_prompt.py
tests/: test_cookiecutter.py
{{cookiecutter.repository}}/: Dockerfile  MLproject  docker-compose.yml  invoke.yml  pre-commit-config.yml  pyproject.toml  setup_mlflow.sh  setups.sh
{{cookiecutter.repository}}/.github/actions/setup/: action.yml
{{cookiecutter.repository}}/.github/workflows/: check.yml  ci.yml  publish.yml
{{cookiecutter.repository}}/tasks/: __init__.py  checks.py  cleans.py  containers.py  docs.py  format.py  install.py  mlflows.py  packages.py
