[tool.poetry]
name = "mlops template"
version = "1.0.0"
description = "MLOps template to deploy ML applications to production"
authors = ["Matheus Ribeiro <94936606+mathewsrc@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
package-mode = false
repository = "https://github.com/mathewsrc/mlops-template-base"

[tool.poetry.dependencies]
python = "^3.12"
polars = "^1.4.0"
ruff = "^0.5.6"
pre-commit = "^3.8.0"
pytest = "^8.3.2"
pytest-cov = "^5.0.0"
fastapi = "^0.112.0"
uvicorn = "^0.30.5"
pydantic = "^2.8.2"
pytest-cookies = "^0.7.0"
invoke = "^2.2.0"
pytest-shell-utilities = "^1.9.0"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
# 2. Avoid enforcing line-length violations (`E501`)
#ignore = ["E501"]
extend-safe-fixes = ["F541"]

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
docstring-code-format = true
line-ending = "auto"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
